fix(Video Player) - CSS positioning
Current CSS for the icon occassionally blocks video player controls
depending upon screen width by covering play button.

This shrinks the button only from the box model perspective
for capturing the click event (not from user's visual click handle)
 to make this a non-issue

--- a/DigitalInspection/Content/site.scss
+++ b/DigitalInspection/Content/site.scss
@@ -106,6 +106,7 @@ i.mdi::before {
 .carousel-control {
 	color: $material-primary;
 	top: calc(50% - 36px);
+	bottom: calc(50% - 36px);
 	background-image: none !important;
 	opacity: 1;
 
